syntax = "proto3";
package se.cygni.multiproto;

message CarRequest {
}

// Request payload
message CarResponse {
    // Each message attribute is strongly typed.
    // You also must assign a "tag" number.
    // Each tag number is unique within the message.
    string name = 1;

    // This defines a strongly typed list of String
    repeated string drivers = 2;

    // There are many more basics types, like Enum, Map
    // See https://developers.google.com/protocol-buffers/docs/proto3
    // for more information.
}

// Defining a Service, a Service can have multiple RPC operations
service CarService {
    // Define a RPC operation
    rpc getCar(CarRequest) returns (CarResponse);
}